--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,12 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
+  - title: "About"
+    url: /about/ 
+  - title: "Research"
+    url: /research/ 
+  - title: "CV"
+    url: /cv 
+  # - title: "Abottut"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
